Fixed column header alignment

--- a/css/screen.less
+++ b/css/screen.less
@@ -285,6 +285,7 @@ i.youtube{.icons(#CD332D,"youtube")};
 	}
 	th {
 		font-weight: 700;
+		text-align: left;
 	}
 	td, th {
 		padding: 0.5em 0;
